--- a/frontend/index.html
+++ b/frontend/index.html
@@ -12,6 +12,14 @@
   </head>
   <body class="h-full">
     <div id="root"></div>
+    <script>
+      var global = global || window;
+      var Buffer = Buffer || [];
+      var process = process || {
+        env: { DEBUG: undefined },
+        version: [],
+      };
+    </script>
     <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
