--- a/example-simplewebauthn/public/index.html
+++ b/example-simplewebauthn/public/index.html
@@ -187,7 +187,7 @@
             let attResp;
             try {
               const opts = await resp.json();
-
+              console.log("Registration Options opts:", opts);
               printDebug(
                 elemDebug,
                 "Registration Options",
@@ -197,6 +197,9 @@
               hideAuthForm();
 
               attResp = await startRegistration(opts);
+
+              console.log("startRegistration attResp:", attResp);
+
               printDebug(
                 elemDebug,
                 "Registration Response",
@@ -257,6 +260,7 @@
             let asseResp;
             try {
               const opts = await resp.json();
+              console.log("Authentication Options opts:", opts);
               printDebug(
                 elemDebug,
                 "Authentication Options",
@@ -266,6 +270,9 @@
               hideAuthForm();
 
               asseResp = await startAuthentication(opts);
+
+              console.log("Authentication Response asseResp:", asseResp);
+
               printDebug(
                 elemDebug,
                 "Authentication Response",
