--- a/frontend/index.html
+++ b/frontend/index.html
@@ -14,11 +14,15 @@
     <div id="root"></div>
     <script>
       var global = global || window;
-      var Buffer = Buffer || [];
+      // var Buffer = Buffer || [];
       var process = process || {
         env: { DEBUG: undefined },
         version: [],
       };
+    </script>
+    <script type="module">
+      import { Buffer } from "buffer";
+      window.Buffer = Buffer;
     </script>
     <script type="module" src="/src/main.tsx"></script>
   </body>
