small ui fixes.  switched login page ui

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -11,7 +11,7 @@
     <title>Provisions WebAuthn Demo</title>
   </head>
   <body class="h-full">
-    <div id="root"></div>
+    <div class="h-full" id="root"></div>
     <script>
       var global = global || window;
       // var Buffer = Buffer || [];
